--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="../public/css/style.css">
+  <title>Game Contributor</title>
 </head>
 <body>
-  
+  <div id="root"></div>
 </body>
 </html>
